<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingTop="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingBottom="@dimen/fab_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/EditTextTertiary"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/EditTextTertiary"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripción" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:theme="@style/EditTextTertiary"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/latitud" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:theme="@style/EditTextTertiary"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/longitud" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnAgregarSitio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/agregar"
        android:theme="@style/RaisedButtonDark" />

</LinearLayout>